Fix some spacing in Kiosk page and heading logo spacing

--- a/style/kiosk_style.css
+++ b/style/kiosk_style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .two-col-grid h1 {
-    font-size: 3.5vw;
+    font-size: 3vw;
     color: var(--blue);
 }
 
