--- a/style/nav.css
+++ b/style/nav.css
@@ -31,11 +31,11 @@ a {
 
 .header-right {
     float: right;
-    margin-top: 5.4%;
+    margin-top: 5%;
 }
 .header a {
-    padding-left: 4em;
-    font-size: 1.4vw;
+    padding-left: 3em;
+    font-size: 1.75vw;
 }
 
 .header a:hover {
@@ -48,11 +48,9 @@ a {
     -moz-text-fill-color: transparent;
 }
 .header img {
+    margin-left: 6.5%;
     width: 10%;
-    margin-left: 7%;
-    margin-top: 2%;
 }
-
 
 .header h1 {
     text-align: center;
